// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Matches snapshot with multiple accounts links 1`] = `
<nav
  aria-label="My account"
  className="nav myAccount"
>
  <h2
    className="myAccountHeading"
  >
    My account
  </h2>
  <div
    className="menuWrapper"
  >
    <ul
      className="menuList"
    >
      <li
        key="https://accounts.nice.org.uk/profile"
      >
        <a
          className="link"
          href="https://accounts.nice.org.uk/profile"
          onClick={[Function]}
        >
          Joe Bloggs
        </a>
      </li>
      <li
        key="https://accounts.nice.org.uk/signout"
      >
        <a
          className="link"
          href="https://accounts.nice.org.uk/signout"
          onClick={[Function]}
        >
          Sign out
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`Nav Matches snapshot with no accounts links 1`] = `
<div
  className="wrapper"
  id="header-menu"
>
  <nav
    aria-label="primary navigation"
    className="nav"
  >
    <div
      className="menuWrapper"
    >
      <ul
        aria-labelledby="header-menu-button"
        className="menuList"
      >
        <li
          key="link1"
        >
          <a
            aria-current={null}
            className="link"
            href="https://url1/"
            onClick={[Function]}
          >
            First link
          </a>
        </li>
        <li
          key="link2"
        >
          <a
            aria-current={null}
            className="link"
            href="https://url2/"
            onClick={[Function]}
          >
            <abbr
              title="Abbreviation title"
            >
              Second link
               
              <span
                className="visuallyHidden"
              >
                Abbreviation title
              </span>
            </abbr>
            <span
              aria-hidden="true"
              className="tooltip"
            >
              Abbreviation title
            </span>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Nav Matches snapshot with single accounts link 1`] = `
<nav
  aria-label="My account"
  className="nav myAccount"
>
  <div
    className="menuWrapper"
  >
    <ul
      className="menuList"
    >
      <li
        key="https://accounts.nice.org.uk/"
      >
        <a
          className="link"
          href="https://accounts.nice.org.uk/"
          onClick={[Function]}
        >
          Sign in
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`Nav Matches snapshot with sub links for selected service 1`] = `
<Nav
  accountsData={null}
  isExpanded={false}
  service="link2"
>
  <div
    className="wrapper wrapperWithSubLinks"
    id="header-menu"
  >
    <nav
      aria-label="primary navigation"
      className="nav"
    >
      <div
        className="menuWrapper"
      >
        <ul
          aria-labelledby="header-menu-button"
          className="menuList"
        >
          <li
            key="link1"
          >
            <a
              aria-current={null}
              className="link"
              href="https://url1/"
              onClick={[Function]}
            >
              First link
            </a>
          </li>
          <li
            key="link2"
          >
            <a
              aria-current={true}
              className="link"
              href="https://url2/"
              onClick={[Function]}
            >
              <abbr
                title="Abbreviation title"
              >
                Second link
                 
                <span
                  className="visuallyHidden"
                >
                  Abbreviation title
                </span>
              </abbr>
              <span
                aria-hidden="true"
                className="tooltip"
              >
                Abbreviation title
              </span>
            </a>
            <SubNav
              links={
                Array [
                  Object {
                    "href": "/",
                    "text": "Sub link 1",
                  },
                  Object {
                    "href": "/test",
                    "text": "Sub link 2",
                  },
                ]
              }
              text="Second link"
            >
              <div
                className="wrapper"
              >
                <ul
                  aria-label="Second link links"
                  className="list"
                >
                  <li
                    key="0"
                  >
                    <a
                      aria-current="page"
                      aria-label="Sub link 1"
                      className="link"
                      href="/"
                      onClick={[Function]}
                    >
                      Sub link 1
                    </a>
                  </li>
                  <li
                    key="1"
                  >
                    <a
                      aria-current={null}
                      aria-label="Sub link 2"
                      className="link"
                      href="/test"
                      onClick={[Function]}
                    >
                      Sub link 2
                    </a>
                  </li>
                </ul>
              </div>
            </SubNav>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</Nav>
`;
